Replace uses of String#formatted() with locale-aware String.format()